--- a/Monitoring_of_retail_outlets/Monitoring_of_retail_outlets.csproj
+++ b/Monitoring_of_retail_outlets/Monitoring_of_retail_outlets.csproj
@@ -59,6 +59,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search_Product_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Search_Product_Form.Designer.cs">
+      <DependentUpon>Search_Product_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="СProduct.cs" />
     <EmbeddedResource Include="Add_Outlets_Form.resx">
       <DependentUpon>Add_Outlets_Form.cs</DependentUpon>
@@ -75,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Search_Product_Form.resx">
+      <DependentUpon>Search_Product_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
